# ivk

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MyAddin.g3a  README.md  ivk.g3a
include/ivk/: instruction.h  ivk.h  manual.h  menu.h  utils.h
scripts/: instructions_generator.py
src/: _ivk.S  asm.h  div1.S  instruction-cpu.def  instruction.h  instructions.S  ivk.h  magic.S  main.c  manual.c
src/ivk/: _code.S  _data.S  asm_utils.h  exec.S  invalid.S  ivk_utils.h  prepare.S
src/menu/: _list.c  disco.c  instruction.c
